<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ed_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/input_or_scan_barcode"
        android:inputType="number" />
    <EditText
        android:id="@+id/ed_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/number"
        android:inputType="number" />
    <Button
        android:id="@+id/bt_out_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_out_storage" />

</LinearLayout>
