<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.4"
        android:text="@string/barcode"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.8"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/storage_number"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
